[package]
name = "backie"
version = "0.1.0"
authors = [
    "Rafael Caricio <rafael@caricio.com>",
]
description = "Async background job processing library with Diesel and Tokio"
repository = "https://code.caric.io/rafaelcaricio/backie"
edition = "2021"
license = "MIT"
readme = "README.md"
rust-version = "1.67"

[lib]
doctest = false

[dependencies]
cron = "0.12"
chrono = "0.4"
hex = "0.4"
log = "0.4"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
sha2 = "0.10"
thiserror = "1.0"
typed-builder = "0.13"
typetag = "0.2"
uuid = { version = "1.1", features = ["v4", "serde"] }
async-trait = "0.1"
async-recursion = "1"
futures = "0.3"
diesel = { version = "2.0", features = ["postgres", "serde_json", "chrono", "uuid"] }
diesel-derive-newtype = "2.0.0-rc.0"
diesel-async = { version = "0.2", features = ["postgres", "bb8"] }
tokio = { version = "1.25", features = ["rt", "time", "macros"] }
