[package]
name = "backie"
version = "0.1.0"
authors = [
    "Rafael Caricio <rafael@caricio.com>",
]
description = "Async background task processing library with Tokio and Postgres"
repository = "https://code.caric.io/rafaelcaricio/backie"
edition = "2021"
license = "MIT"
readme = "README.md"
rust-version = "1.67"

[lib]
doctest = false

[dependencies]
chrono = "0.4"
log = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "1"
uuid = { version = "1.1", features = ["v4", "serde"] }
async-trait = "0.1"
futures = "0.3"
diesel = { version = "2.0", features = ["postgres", "serde_json", "chrono", "uuid"] }
diesel-derive-newtype = "2.0.0-rc.0"
diesel-async = { version = "0.2", features = ["postgres", "bb8"] }
tokio = { version = "1.25", features = ["rt", "time", "macros"] }

[dev-dependencies]
itertools = "0.10"
