[package]
name = "backie"
version = "0.8.0"
authors = [
    "Rafael Caricio <rafael@caricio.com>",
]
description = "Background task processing for Rust applications with Tokio, Diesel, and PostgreSQL."
keywords = ["async", "background", "task", "jobs", "queue"]
repository = "https://github.com/rafaelcaricio/backie"
edition = "2021"
license = "MIT"
readme = "README.md"
rust-version = "1.67"

[dependencies]
chrono = { version = "0.4", default-features = false }
log = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
uuid = { version = "1.1", features = ["v4", "serde"] }
async-trait = "0.1"
futures = "0.3"
diesel = { version = "2.1", features = ["serde_json", "chrono", "uuid"] }
diesel-derive-newtype = "2.0.0-rc.0"
diesel-async = { version = "0.3", features = ["postgres", "bb8"], optional = true }
tokio = { version = "1.25", features = ["rt", "time", "macros", "sync"] }

[dev-dependencies]
itertools = "0.11"

[features]
default = ["async_postgres"]
async_postgres = ["diesel-async"]
