[package]
name = "simple_async_worker"
version = "0.1.0"
edition = "2021"

[dependencies]
fang = { path = "../../../" }
env_logger = "0.9.0"
log = "0.4.0"
tokio = { version = "1", features = ["full"] }
diesel-async = { version = "0.2", features = ["postgres", "bb8"] }
diesel = { version = "2.0", features = ["postgres"] }
